display is working gamelogic to be connected

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="script.js"></script>    
+    <p>Tic Tac Toe</p>
+    <script src="script.js"></script> 
+    <p id="status">click on the board to play</p>   
 </body>
 </html>
