status added dynamically

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <p>Tic Tac Toe</p>
       
-    <p id="status">click on the board to play</p>
+    <!-- <p id="status">click on the board to play</p> -->
     <form>
         <div>
             <label for="player1">Player X Name:</label>
