--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <script src="script.js" defer></script>  
 </head>
 <body>
-    <p>Tic Tac Toe</p>
+    <p id="header">Tic-Tac-Toe</p>
       
-    <!-- <p id="status">click on the board to play</p> -->
     <form>
         <div>
             <label for="player1">Player X Name:</label>
@@ -20,7 +19,7 @@
             <label for="player2">Player O Name:</label>
             <input type="text" id="player2" name="player2">
         </div>
-        <button type="submit">submit</button>
+        <button id='submit' type="submit">Start</button>
     </form>
 </body>
 </html>
