--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <form>
         <div>
             <label for="player1">Player X Name:</label>
-            <input type="text" id="player1" name="player1">
+            <input type="text" id="player1" name="player1" required>
         </div>
         <div>
             <label for="player2">Player O Name:</label>
-            <input type="text" id="player2" name="player2">
+            <input type="text" id="player2" name="player2" required>
         </div>
         <button id='submit' type="submit">Start</button>
     </form>
